--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./src/server.js",
+    "start": " node ./src/server.js",
     "dev": "nodemon ./src/server.js"
   },
   "keywords": [],
