added: cron service

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "express": "^5.2.1",
     "joi": "^18.0.2",
     "mongoose": "^9.1.4",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.11"
   }
 }
